# DA-labs

./: .gitignore  CMakeLists.txt  README.md
DA lab1/: CMakeLists.txt  Makefile  TVector.h  T_Vector.h  benchmark.cpp  main.cpp  test.sh  testGener.py
DA lab2/: TPatricia.cpp  TPatricia.h  TString.cpp  TString.h  benchmark.cpp  main.cpp
DA lab4/: benchmark.cpp  main.cpp
DA lab5/: BORis.h  CMakeLists.txt  main.cpp
DA lab6/: CMakeLists.txt  itog.cpp  long_num.h  main.cpp
DA lab7/: CMakeLists.txt  benchmark.cpp  main.cpp
DA lab8/: CMakeLists.txt  main.cpp
DA lab9/: CMakeLists.txt  main.cpp
